(fix): change the gap for the tablet version

--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -2,7 +2,7 @@
   .section__podlist-pods {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 1.5rem;
+    gap: 2rem;
     padding: 2rem;
   }
 
